# unit_static_analyser

./: .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
tests/: test_checker.py  test_checker_mypy.py  test_file_directory_discovery.py  test_unit_static_analyser.py  test_units.py
unit_static_analyser/: __init__.py  __main__.py
unit_static_analyser/checker/: __init__.py  checker.py  errors.py
unit_static_analyser/mypy_checker/: checker.py
unit_static_analyser/units/: __init__.py  core.py  types.py  units.py
