[project]
name = "unit_static_analyser"
version = "0.1.0"
description = "Add units and physical quantities to Python with static analysis"
authors = [{name = "Christopher Cave-Ayland", email = "c.cave-ayland@imperial.ac.uk"}]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
pre-commit = "^4.2.0"
ruff = "^0.12.4"


[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/", "docs/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=unit_static_analyser --cov-branch --cov-report=html --cov-report=xml --doctest-modules --ignore=unit_static_analyser/__main__.py --ignore=docs/"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
